get rid of padding/alignment issues.

--- a/packages/ui/src/SelectField.module.scss
+++ b/packages/ui/src/SelectField.module.scss
@@ -97,13 +97,13 @@ $select: ':global .hz-select-field__control';
 
 // when .isMulti is true, we have some tweaks overall
 .multiContainer {
-  #{$select} {
-    padding: c.$grid;
+  #{$select}.hz-select-field__control--has-value {
+    padding: c.$grid; // padding is narrower in .multiContainer (when it has any values selected)
   }
 
   :global .hz-select-field__indicators {
     align-items: flex-start;
-    padding-top: c.$grid;
+    margin-top: c.$grid * 1.5;
   }
 
   .multiValue {
